# MetaCPP

./: .gitignore  .gitmodules  README.md
.github/workflows/: example.yml
CMake/: FindClang.cmake  FindLLVM.cmake  MetaPrebuild.cmake
Example/: CMakeLists.txt  main.cpp  objects.hpp
Examples/: CMakeLists.txt
Examples/Generation/: CMakeLists.txt  main.cpp  test.hpp
MetaCPP/: CMakeLists.txt
MetaCPP-CLI/: ASTScraper.cpp  ASTScraper.hpp  CMakeLists.txt  Main.cpp  MetaExporter.cpp  MetaExporter.hpp  ScraperTool.cpp  ScraperTool.hpp  Templates.hpp
MetaCPP-CLI/src/: ASTScraper.cpp  ASTScraper.hpp  ASTScraperAction.cpp  ASTScraperAction.hpp  ASTScraperConsumer.cpp  ASTScraperConsumer.hpp  ASTScraperVisitor.cpp  ASTScraperVisitor.hpp  Main.cpp  MetaExporter.cpp  MetaExporter.hpp  MetaGenerator.cpp  MetaGenerator.hpp  ScraperTool.cpp  ScraperTool.hpp
MetaCPP-CLI/templates/: source.qualifiedType.template  source.template
MetaCPP/include/MetaCPP/: Container.hpp  Dumpeable.hpp  Exportable.hpp  Field.hpp  IDs.hpp  JsonSerializer.hpp  Method.hpp  QualifiedName.hpp  QualifiedType.hpp  Runtime.hpp  SequentialContainer.hpp  Storage.hpp  Templates.hpp  Type.hpp  TypeHash.hpp  TypeID.hpp  TypeInfo.hpp
MetaCPP/include/MetaCPP/templates/: dump_storage.template  dump_type.template  header.template  source.qualifiedType.template  source.template
MetaCPP/src/MetaCPP/: Container.cpp  Dumpeable.cpp  Exportable.cpp  Field.cpp  JsonSerializer.cpp  Method.cpp  QualifiedName.cpp  QualifiedType.cpp  Runtime.cpp  SequentialContainer.cpp  Storage.cpp  Type.cpp  TypeHash.cpp
